jilles      2007/03/31 15:44:37 UTC	(20070331-8015)
  Log:
  Clarify SETPASS email a little.
  

  Changes:	Modified:
  +1 -1		trunk/src/function.c (File Modified) 


jilles      2007/03/31 15:24:26 UTC	(20070331-8013)
  Log:
  inspircd11:
  If lowerTS FJOIN is received, reop with :<server> FMODE
  and not :<service> MODE, because sending MODE
  server-server is deprecated.
  

  Changes:	Modified:
  +1 -1		trunk/modules/protocol/inspircd11.c (File Modified) 


jilles      2007/03/31 14:08:53 UTC	(20070331-8011)
  Log:
  sendemail():
  - fix nickname vs account in verification email
  - update comments
  

  Changes:	Modified:
  +1 -9		trunk/src/function.c (File Modified) 


nenolod     2007/03/30 03:03:27 UTC	(20070330-8009)
  Log:
  - revert r8001.
  

  Changes:	Modified:
  +0 -22	trunk/aclocal.m4 (File Deleted) 
  +0 -16892	trunk/configure (File Deleted) 
  +0 -219	trunk/include/sysconf.h.in (File Deleted) 


jilles      2007/03/29 22:36:47 UTC	(20070329-8007)
  Log:
  Fix multiple-include guard in internal.h so it's not the
  same as in linker.h.
  

  Changes:	Modified:
  +2 -2		trunk/include/internal.h (File Modified) 


jilles      2007/03/29 22:27:21 UTC	(20070329-8005)
  Log:
  Add a #define for ngettext() for !ENABLE_NLS.
  

  Changes:	Modified:
  +1 -0		trunk/include/i18n.h (File Modified) 


w00t        2007/03/29 17:54:50 UTC	(20070329-8003)
  Log:
  Allow mlocking of +J on inspircd11, check for PROTOCOL_FMODEUSER before using FMODE in mode_sts(), otherwise use safe (but crappy) MODE

  Changes:	Modified:
  +33 -2	trunk/modules/protocol/inspircd11.c (File Modified) 


w00t        2007/03/29 16:48:49 UTC	(20070329-8001)
  Log:
  Re-add automake generated files (no, the whole world does not have automake and friends installed, relying on this is not nice)

  Changes:	Modified:
  +22 -0	trunk/aclocal.m4 (File Added) 
  +16892 -0	trunk/configure (File Added) 
  +219 -0	trunk/include/sysconf.h.in (File Added) 

